# Ocaml-PPX

./: README.md
ppx_1/: dune-project
ppx_1/_build/: .db  .digest-db  log
ppx_1/_build/default/: META.ppx_1  ppx_1.dune-package  ppx_1.install  ppx_1.opam
ppx_1/_build/default/.dune/: configurator  configurator.v2
ppx_1/_build/default/.ppx/e44129f0d5ea5baff75503c9416c88a9/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
ppx_1/_build/default/lib/: ppx_1.cma  ppx_1.cmxa  ppx_1.cmxs
ppx_1/_build/default/lib/.merlin-conf/: lib-ppx_1
ppx_1/_build/default/lib/.ppx_1.objs/byte/: ppx_1.cmi  ppx_1.cmo  ppx_1.cmt
ppx_1/_build/default/lib/.ppx_1.objs/native/: ppx_1.cmx
ppx_1/_build/default/test/: explicit_typing.ml  test_ppx_1.ml
ppx_1/_build/install/default/lib/ppx_1/: META  dune-package  opam  ppx_1.cma  ppx_1.cmi  ppx_1.cmt  ppx_1.cmx  ppx_1.cmxa  ppx_1.cmxs  ppx_1.ml
ppx_1/_tmp_ocaml/: section_1752687080743.ml
ppx_1/lib/: dune  ppx_1.ml
ppx_1/test/: dune  explicit_typing.ml  test_ppx_1.cmi  test_ppx_1.cmo  test_ppx_1_compiled
